[project]
name = "tws-integration-tests"
version = "0.1.0"
description = "Integration tests for the tWS projects"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "aio-pika>=9.6.2",
    "aioboto3>=15.5.0",
    "asyncmy>=0.2.11",
    "asyncpg>=0.31.0",
    "httpx>=0.28.0",
    "mypy>=1.20.0",
    "openapi-core>=0.23.1",
    "pytest-asyncio>=1.3.0",
    "pytest-datadir>=1.8.0",
    "pytest-httpserver>=1.1.5",
    "pytest>=9.0.3",
    "pyyaml>=6.0",
    "ruff>=0.15.0",
    "sqlalchemy[asyncio]>=2.0.49",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.lint.isort]
known-first-party = ["tws_*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["tests"]

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "aioboto3.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260408",
]
