[package]
name = "tws-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.6.1", features = ["derive"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["signal", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"]}
